--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "wds"
+    "start": "wds",
+    "build": "npx tsc && npx rollup -c && cp style.css build/"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,14 @@
   },
   "devDependencies": {
     "@kocal/rollup-plugin-graphql": "^1.0.0",
+    "@open-wc/rollup-plugin-html": "^1.2.3",
     "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@web/dev-server": "0.0.10",
-    "@web/dev-server-esbuild": "^0.2.4"
+    "@web/dev-server-esbuild": "^0.2.4",
+    "patch-package": "^6.2.2",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2"
   }
 }
