--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo-elements/components": "^1.0.0-alpha.7",
-    "@apollo-elements/lit-apollo": "^3.0.0-alpha.10",
+    "@apollo-elements/components": "^1.0.0",
+    "@apollo-elements/lit-apollo": "^3.0.0",
     "@apollo/client": "^3.2.0",
+    "@power-elements/json-viewer": "^2.1.0",
     "apollo3-cache-persist": "^0.4.0",
     "graphql": "^15.3.0",
     "pwa-helpers": "^0.9.1"
   },
   "devDependencies": {
-    "@kocal/rollup-plugin-graphql": "^1.0.0",
+    "@apollo-elements/rollup-plugin-graphql": "^1.0.3",
     "@open-wc/rollup-plugin-html": "^1.2.3",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@rollup/plugin-typescript": "^6.0.0",
     "@web/dev-server": "0.0.10",
     "@web/dev-server-esbuild": "^0.2.4",
